--- a/style.css
+++ b/style.css
@@ -1,24 +1,20 @@
+.nav-item {
+    border: 1px solid black;
+    background-color: white;
+    cursor: pointer;
+}
+
 .nav-item-active {
     background-color: orange;
-}
-
-.content {
-    max-width: 200px;
-}
-
-button {
-    background-color: #fff;
-    border-bottom: none;
-
-}
-
-.tabs div {
-    background-color: orange;
-    padding: 10px;
+    border-bottom: 1px solid orange;
 }
 
 .tab-content {
     display: none;
+    background-color: orange;
+    height: 50px;
+    max-width: 250px;
+    padding: 5px;
 }
 
 .tab-content-active {
